--- a/src/vue/core/index.html
+++ b/src/vue/core/index.html
@@ -11,6 +11,7 @@
         {{text}}
       </div>
     <script src="./MVVM.js"></script>
+    <script src="./Watcher.js"></script>
     <script src="./Observe.js"></script>
     <script src="./Dep.js"></script>
     <script src="./Compile.js"></script>
