--- a/src/vue/demo.html
+++ b/src/vue/demo.html
@@ -6,18 +6,53 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <span :title="lastName">{{lastName}}</span>
+        <button :[firstName]="isButtonDisalbed">阿牛</button>
+        <h2>{{getFullName()}}</h2>
+        <h2>{{getFullName()}}</h2>
+        <h2>{{getFullName()}}</h2>
+        <h2>{{getFullName()}}</h2>
+    </div>
     <script src="./vue.js"></script>
     <script>
-        new Vue({
+        const data = {
+            firstname: 'disabled',
+            isButtonDisalbed: 'null',
+                firstName: 'z',
+                lastName: 'l',
+                books: [
+                    {id: 110, name: 'unix', price: 192},
+                    {id: 110, name: 'unix', price: 192},
+                    {id: 110, name: 'unix', price: 192}
+                ]
+            }
+        const app = new Vue({
             el: '#app',
-            data:{
-                name: 1
+            data,
+            computed:{
+                fullName: {
+                    set(newVal, oldVal){
+                        console.log(newVal, oldVal)
+                    },
+                    get(){
+                        return this.firstName + '  ' + this.lastName
+                    }
+                }
             },
-            beforeCreate(){
-                console.log(1)
+            mounted(){
+                for(let book of this.books){
+                    console.log(book)
+                }
+            },
+            methods: {
+                getFullName(){
+                    console.log(12)
+                    return this.firstName + '  ' + this.lastName
+                }
             }
         })
-    </script>
+        
+  </script>
 </body>
 </html>
