--- a/src/css/stickyFooter.html
+++ b/src/css/stickyFooter.html
@@ -14,6 +14,8 @@
             display: flex;
             flex-direction: column;
             height: 300px;
+            background: url('http://www.yiibai.com/uploads/images/201707/1307/350100750_71786.png') no-repeat;
+            background: red;
         }
         .detail-content{
             flex-grow: 1;
@@ -32,7 +34,7 @@
     <!-- order align-self -->
     <div class="main">
         <div class="detail-flex">
-            <div class="detail-content">odd</div>
+            <div class="detail-content">odd<span style="vertical-align: super;font-size: 11px;">12</span></div>
             <div class="detail-content">odd</div>
             <div class="detail-footer">detail-footer</div>
         </div>
