--- a/src/javascript/prototype.html
+++ b/src/javascript/prototype.html
@@ -41,6 +41,37 @@
         console.log(XhDog.prototype)
         const xhDog = new XhDog()
         // xhDog.help()
+
+        Function.prototype.binda = function(context){
+            var self = this
+            var args = [].slice.call(arguments, 1)
+            var fNop = function(){}
+            
+            var fBound = function(){
+                var bindArgs = [].slice.call(arguments)
+                return self.apply(this instanceof fNop? this: context, args.concat(bindArgs))
+            }
+            fNop.prototype = this.prototype
+            fBound.prototype = new fNop();
+            return fBound;
+        }
+
+        Function.prototype.softBind = function(obj){
+            var fn = this
+            var args = [].slice.call(arguments, 1)
+
+            var bound = function(){
+                var arguments = [].slice.call(arguments)
+                return fn.apply(
+                    (!this||this ===(window||globalThis))? obj: this, args.concat(arguments)
+                )
+            }
+            bound.prototype = Object.create(this.prototype)
+            return bound
+        }
+
+        
+
     </script>
 </body>
 </html>
